<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".CreateReviewActivity">

        <LinearLayout
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/storeImageArea"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/store_icon" />

                <TextView
                    android:id="@+id/storeNameTextArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/bmjua"
                    android:gravity="center"
                    android:text="@string/store_name"
                    android:textColor="@color/brown"
                    android:textSize="32sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bmjua"
                android:gravity="center"
                android:text="@string/review_please_text"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_effect"
                android:orientation="vertical"
                android:padding="10dp">

                <!--                <TextView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="center"-->
                <!--                    android:fontFamily="@font/bmjua"-->
                <!--                    android:text="별점을 등록"-->
                <!--                    android:textSize="24sp"-->
                <!--                    android:textStyle="bold" />-->
                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_effect"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/getImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_effect"
                    android:drawableLeft="@drawable/review_gallery_icon_resize"
                    android:drawablePadding="7dp"
                    android:fontFamily="@font/bmjua"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/review_gallery_add_tv"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <!--            <androidx.recyclerview.widget.RecyclerView-->
                <!--                android:id="@+id/photoRecyclerView"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="58dp"-->
                <!--                android:layout_marginTop="10dp"-->
                <!--                android:orientation="horizontal"-->
                <!--                app:layout_constraintEnd_toEndOf="parent"-->
                <!--                app:layout_constraintHorizontal_bias="0.0"-->
                <!--                app:layout_constraintStart_toStartOf="parent"-->
                <!--                app:layout_constraintTop_toBottomOf="@+id/textView4" />-->

                <ImageView
                    android:id="@+id/ReviewImageArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_effect"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/reviewEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/bmjua"
                    android:hint="@string/review_please_text"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/close_btn"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginRight="100dp"
                android:fontFamily="@font/bmjua"
                android:text="취소"

                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_btn"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:fontFamily="@font/bmjua"
                android:text="등록"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
